--- a/dev/scss/sections/_section-1.scss
+++ b/dev/scss/sections/_section-1.scss
@@ -13,4 +13,7 @@
     @include md{
         padding: 800px 0 180px;
     }
+    @include lg{
+        padding-top: 650px;
+    }
 }
