--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -9,10 +9,13 @@
         h1 {
             text-align: center;
             padding-bottom: none;
-            padding-top: 10px;
+            padding-top: 20px;
 
             @include md {
                 font-size: 2.5rem;
+            }
+            @include lg{
+                padding-top: 40px;
             }
         }
     }
@@ -44,10 +47,24 @@
                 h4{
                     padding-top: 25px;
                 }
+                @include lg{
+                    img{
+                        padding-top: 35px;
+                        padding-bottom: 15px;
+                        width: 35%;
+                    }
+                }
             }
             #card6{
                 h4{
                     padding-top: 20px;
+                }
+                @include lg{
+                    img{
+                        padding-top: 40px;
+                        padding-bottom: 25px;
+                        width: 43%;
+                    }
                 }
             }
 
@@ -56,6 +73,15 @@
                 text-align: center;
                 padding: 20px 0px;
                 margin-bottom: 39px;
+                @include md{
+                    margin-bottom: 0px;
+                }
+                @include lg{
+                    margin-bottom: 0px;
+                }
+                @include xl{
+                    margin-bottom: 0px;
+                }
 
                 button:hover,
                 button:active{
