--- a/dev/scss/sections/_section-3.scss
+++ b/dev/scss/sections/_section-3.scss
@@ -11,6 +11,12 @@
         h1 {
             text-align: center;
             padding-bottom: 20px;
+            @include md{
+                padding-top: 20px;
+            }
+            @include lg{
+                padding-top: 40px;
+            }
         }
 
     }
